src/Projects.css
/************** PROJECTS *****************/

.Projects{
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin-left: 10%;
  margin-bottom: 5%;
  /* flex-direction: column; */
  /* align-items: center;
  justify-content: center;
  flex-wrap: wrap; */
  animation: fadeIn 3s forwards;
}


/************** KEYFRAMES *****************/

@keyframes fadeIn {
  from{
    opacity: 0;
  }
  to{
    opacity: 1;
  }
}

/************** RESPONSIVE MEDIA QUERIES *****************/

@media (max-width: 1000px){
  .Projects{
    display: flex;
    flex-direction: column;
    align-items: center;
    animation: fadeIn 3s forwards;
  }
}

